--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -16,3 +16,6 @@ License URI: http://www.gnu.org/licenses/gpl-2.0.html
 @import "node_modules/normalize.css/normalize.css";
 @import "abstracts/variables";
 @import "core/typography";
+@import "core/colors";
+@import "layout/footer";
+@import "layout/navigation";
