--- a/assets/scss/core/_typography.scss
+++ b/assets/scss/core/_typography.scss
@@ -1,11 +1,69 @@
-@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&family=Playfair+Display&display=swap");
+@font-face {
+	font-family: "Playfair Display";
+	src: url(./assets/fonts/Playfair_Display/static/PlayfairDisplay-Regular.ttf);
+	font-weight: 400;
+	font-style: normal;
+}
+
+@font-face {
+	font-family: "Playfair Display";
+	src: url(./assets/fonts/Playfair_Display/static/PlayfairDisplay-SemiBold.ttf);
+	font-weight: 600;
+	font-style: normal;
+}
+
+@font-face {
+	font-family: "Open Sans";
+	src: url(./assets/fonts/Open_Sans/static/OpenSans/OpenSans-Regular.ttf);
+	font-weight: 400;
+	font-style: normal;
+}
+
+@font-face {
+	font-family: "Open Sans";
+	src: url(./assets/fonts/Open_Sans/static/OpenSans/OpenSans-SemiBold.ttf);
+	font-weight: 600;
+	font-style: normal;
+}
 
 $font-sans: "Open Sans", sans-serif;
 $font-serif: "Playfair Display", serif;
 
 body {
+	font-family: $font-serif;
+	font-size: 1rem;
+	line-height: 1.75;
+}
+
+#menu-primary-menu a {
 	font-family: $font-sans;
-	line-height: normal;
+	font-size: 12px;
+	text-transform: uppercase;
+	font-weight: 600;
+	letter-spacing: 1px;
+}
+
+#page {
+	#title {
+		h1 {
+			font-family: $font-serif;
+			font-size: 2.5rem;
+			font-weight: 400;
+
+			&::after {
+				background-color: $color-white;
+				bottom: 0;
+				content: "";
+				display: block;
+				height: 2px;
+				left: 0;
+				right: 0;
+				margin: 10px auto;
+				position: relative;
+				width: 120px;
+			}
+		}
+	}
 }
 
 #site-footer {
