--- a/assets/scss/pages/_page.scss
+++ b/assets/scss/pages/_page.scss
@@ -1,5 +1,6 @@
 body.page #site-content,
-body.blog #site-content {
+body.blog #site-content,
+body.single #site-content {
 	background: $color-white;
 
 	#page {
