--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -18,9 +18,12 @@ License URI: http://www.gnu.org/licenses/gpl-2.0.html
 @import "core/colors";
 @import "core/typography";
 @import "layout/header";
+@import "layout/main";
 @import "layout/footer";
 @import "layout/navigation";
 @import "pages/page";
 @import "pages/blog";
 @import "pages/home";
+@import "pages/courses";
+@import "pages/gallery";
 @import "vendors/ninja-forms";
