--- a/assets/scss/layout/_navigation.scss
+++ b/assets/scss/layout/_navigation.scss
@@ -21,11 +21,11 @@
 	}
 
 	#menu-primary-menu.show {
+		background-color: $color-white;
 		display: block;
 		position: absolute;
 		left: 0;
 		top: 108px;
-		background: $color-white;
 		width: 100%;
 		height: calc(100vh - 100px);
 		overflow: hidden;
@@ -63,22 +63,40 @@
 
 				a {
 					border-bottom: none;
+					color: $color-black;
+					font-family: $font-sans-primary;
+					font-size: 12px;
+					text-transform: uppercase;
+					font-weight: 600;
+					letter-spacing: 1px;
+
+					&:hover {
+						color: $color-red;
+					}
 				}
 
 				ul {
 					display: none;
 				}
 
+				.sub-menu li a {
+					color: $color-dark-grey;
+
+					&:hover {
+						background-color: $color-light-grey;
+						color: $color-dark-grey;
+					}
+				}
+
 				&:hover {
 					ul {
-						background: $color-white;
+						background-color: $color-white;
 						position: absolute;
 						left: 0;
 						display: block;
 						width: 200px;
 						margin: 26px 0 0;
 						padding: 0;
-
 
 						li {
 							display: block;
