--- a/assets/scss/pages/_courses.scss
+++ b/assets/scss/pages/_courses.scss
@@ -1,9 +1,9 @@
 body.courses #site-content {
-	background: $color-white;
+	background-color: $color-white;
 
 	#page {
 		#title {
-			background: rgba(51, 51, 51, 0.75);
+			background-color: rgba(51, 51, 51, 0.75);
 			background-position: center;
 			background-repeat: no-repeat;
 			background-size: cover;
@@ -17,42 +17,44 @@ body.courses #site-content {
 			}
 
 			div {
-				padding: 0 3em 5em;
 				max-width: 700px;
 				margin: auto;
+				padding: 0 3em 5em;
 				text-align: center;
 			}
 		}
 
 		#content {
 			#inner-content {
-				margin: 2em;
 				display: grid;
-				grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
 				grid-column-gap: 2em;
+				grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
 				grid-row-gap: 2em;
+				margin: 2em;
 
 				.course {
-					background: $color-light-grey;
-					position: relative;
+					background-color: $color-light-grey;
 					overflow: hidden;
+					position: relative;
 
 					h2 {
 						font-family: $font-sans-serif;
-						font-weight: 600;
+						font-family: $font-sans-primary;
 						font-size: 1.2em;
-						text-align: center;
+						font-weight: 600;
 						padding: 0 2em;
+						text-align: center;
 					}
 
 					h3 {
 						background-color: $color-red;
 						color: $color-white;
-						text-align: center;
-						margin: 0;
-						font-weight: 100;
 						font-size: 1em;
+						font-family: $font-sans-primary;
+						font-weight: 100;
+						margin: 0;
 						padding: 0.5em;
+						text-align: center;
 					}
 
 					.teaser {
@@ -60,32 +62,42 @@ body.courses #site-content {
 					}
 
 					.read-more {
+						bottom: 0;
 						padding: 0 2em;
 						position: absolute;
-						bottom: 0;
 						right: 0;
 					}
 
 					.image {
 						border: none;
+						&.course-sold-out {
+							background-color: rgba(51, 51, 51, 0.66) !important;
+							background-blend-mode: darken;
+							background-position: center;
+							background-repeat: no-repeat;
+							background-size: cover;
+						}
 					}
 
 					.sold-out {
-						top: 3em;
-						right: -5em;
+						background-color: $color-red;
+						box-shadow: 0 0 0.5em rgba(0, 0, 0, 0.5);
+						font-family: $font-sans-primary;
+						font-weight: 400;
 						color: $color-white;
 						display: block;
+						letter-spacing: 0.06em;
+						line-height: 1.2em;
+						padding: 0.5em 6em;
 						position: absolute;
+						right: -5em;
 						text-align: center;
 						text-decoration: none;
-						letter-spacing: 0.06em;
-						background-color: $color-red;
-						padding: 0.5em 6em 0.5em 6em;
 						text-shadow: 0 0 0.75em #444;
-						box-shadow: 0 0 0.5em rgba(0, 0, 0, 0.5);
-						font: bold 16px/1.2em Arial, Sans-Serif;
+						top: 3em;
 						transform: rotate(45deg) scale(0.75, 1);
 						z-index: 1;
+
 						&:before {
 							content: "";
 							top: 0;
