--- a/assets/scss/pages/_home.scss
+++ b/assets/scss/pages/_home.scss
@@ -3,7 +3,21 @@
 		display: flex;
 		flex-direction: row;
 		min-height: calc(50vh - 80px);
+		background-color: $color-white;
+		color: $color-black;
 
+		a {
+			color: $color-black;
+		}
+
+		&:nth-of-type(even) {
+			background-color: $color-black;
+			color: $color-white;
+
+			a {
+				color: $color-white;
+			}
+		}
 
 		div {
 			width: 50%;
@@ -27,5 +41,4 @@
 			flex-direction: row-reverse;
 		}
 	}
-
 }
