--- a/assets/scss/pages/_courses.scss
+++ b/assets/scss/pages/_courses.scss
@@ -36,6 +36,7 @@ body.courses #site-content {
 					background-color: $color-light-grey;
 					overflow: hidden;
 					position: relative;
+					box-shadow: $color-medium-grey 0px 0px 15px;
 
 					h2 {
 						font-family: $font-sans-serif;
