--- a/assets/scss/core/_colors.scss
+++ b/assets/scss/core/_colors.scss
@@ -1,11 +1,11 @@
 /* https://coolors.co/333333-666666-790e11-5e81ac-ffffff-ffffff */
-$color-black: #333;
-$color-dark-grey: #666;
-$color-medium-grey: #ccc;
-$color-light-grey: #f8f8f8;
-$color-red: #790e11;
-$color-blue: #5e81ac;
-$color-white: #fff;
+$color-black: hsl(0, 0%, 20%);
+$color-dark-grey: hsl(0, 0%, 40%);
+$color-medium-grey: hsl(0, 0%, 60%);
+$color-semi-light-grey: hsl(0, 0%, 80%);
+$color-light-grey: hsl(0, 0%, 95%);
+$color-white: hsl(0, 0%, 100%);
+$color-red: hsl(360, 80%, 25%);
 
 body {
 	background-color: $color-black;
