--- a/assets/scss/layout/_navigation.scss
+++ b/assets/scss/layout/_navigation.scss
@@ -25,13 +25,13 @@
 		display: block;
 		position: absolute;
 		left: 0;
-		top: 108px;
+		top: 64px;
 		width: 100%;
 		height: calc(100vh - 100px);
-		overflow: hidden;
+		overflow: scroll;
 		box-sizing: border-box;
 		list-style: none;
-		padding: 0 2em;
+		padding: 2em 2em 4em;
 
 		li {
 			padding: 0.5em 0;
