--- a/assets/scss/layout/_footer.scss
+++ b/assets/scss/layout/_footer.scss
@@ -7,7 +7,7 @@
 	font-size: 12px;
 	left: 0;
 	padding: 30px;
-	position: fixed;
+	position: relative;
 	text-transform: uppercase;
 	text-align: center;
 	width: 100%;
@@ -16,13 +16,15 @@
 	a {
 		color: $color-medium-grey;
 	}
+
+	.wrap {
+		max-width: 400px;
+		margin: auto;
+	}
 }
 
-@media screen and (max-width: $screen-md-min) {
+@media screen and (min-width: $screen-md-min) {
 	#site-footer {
-		.wrap {
-			max-width: 400px;
-			margin: auto;
-		}
+		position: fixed;
 	}
 }
