--- a/assets/scss/layout/_main.scss
+++ b/assets/scss/layout/_main.scss
@@ -1,3 +1,9 @@
 #site-content {
-	padding: 80px 0;
+	padding: 80px 0 0 0;
+}
+
+@media screen and (min-width: $screen-md-min) {
+	#site-content {
+		padding: 80px 0;
+	}
 }
