--- a/assets/scss/pages/_page.scss
+++ b/assets/scss/pages/_page.scss
@@ -43,7 +43,7 @@ body.single #site-content {
 		}
 
 		#content {
-			background-color: #fbfbfd;
+			background-color: $color-light-grey;
 			box-sizing: border-box;
 			height: auto;
 			overflow-y: scroll;
