Show message if no cooking courses are available currently

--- a/assets/scss/pages/_courses.scss
+++ b/assets/scss/pages/_courses.scss
@@ -113,6 +113,11 @@ body.courses #site-content {
 					}
 				}
 			}
+			.no-course {
+				text-align: center;
+				padding: 50px 10px;
+				margin: 0;
+			}
 		}
 	}
 }
