WIP: Adjust courses view

--- a/assets/scss/core/_variables.scss
+++ b/assets/scss/core/_variables.scss
@@ -1,4 +1,5 @@
 $screen-sm-min: 576px; // Small tablets and large smartphones (landscape view)
-$screen-md-min: 768px; // Small tablets (portrait view)
+// $screen-md-min: 768px; // Small tablets (portrait view)
+$screen-md-min: 992px; // Small tablets (portrait view)
 $screen-lg-min: 992px; // Tablets and small desktops
 $screen-xl-min: 1200px; // Large tablets and desktops
