--- a/assets/scss/pages/_courses.scss
+++ b/assets/scss/pages/_courses.scss
@@ -28,9 +28,10 @@ body.courses #site-content {
 			#inner-content {
 				display: grid;
 				grid-column-gap: 2em;
-				grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
+				grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
 				grid-row-gap: 2em;
 				margin: 2em;
+				box-sizing: border-box;
 
 				.course {
 					background-color: $color-light-grey;
@@ -72,7 +73,7 @@ body.courses #site-content {
 					.image {
 						border: none;
 						&.course-sold-out {
-							background-color: rgba(51, 51, 51, 0.66) !important;
+							background-color: rgba(51, 51, 51, 0.5) !important;
 							background-blend-mode: darken;
 							background-position: center;
 							background-repeat: no-repeat;
@@ -112,6 +113,12 @@ body.courses #site-content {
 						}
 					}
 				}
+
+				&::after {
+					content: "";
+					display: block;
+					clear: both;
+				}
 			}
 			.no-course {
 				text-align: center;
@@ -119,5 +126,11 @@ body.courses #site-content {
 				margin: 0;
 			}
 		}
+	}
+}
+
+@media screen and (min-width: $screen-md-min) {
+	body.courses #site-content #page #content #inner-content {
+		grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
 	}
 }
