--- a/assets/scss/pages/_page.scss
+++ b/assets/scss/pages/_page.scss
@@ -14,6 +14,7 @@ body.single #site-content {
 			font-weight: 400;
 			margin-top: 0;
 			text-align: center;
+			padding: 50px;
 			&::after {
 				background-color: $color-white;
 				bottom: 0;
@@ -43,11 +44,11 @@ body.single #site-content {
 		}
 
 		#content {
-			background-color: $color-light-grey;
+			background-color: $color-white;
 			box-sizing: border-box;
 			height: auto;
 			overflow-y: scroll;
-			padding: 3em;
+			padding: 60px 8%;
 			width: 100%;
 
 			#inner-content {
