Adjust menu styles

--- a/assets/scss/core/_typography.scss
+++ b/assets/scss/core/_typography.scss
@@ -38,8 +38,8 @@ body {
 		text-decoration: none;
 		border-bottom: 1px dotted;
 
-		&:focus,
-		&:hover {
+		&:hover,
+		&:focus {
 			border-bottom: 1px solid;
 		}
 	}
