--- a/assets/scss/layout/_commentform.scss
+++ b/assets/scss/layout/_commentform.scss
@@ -25,7 +25,8 @@
 		transition: all 0.5s;
 		height: 50px;
 		width: auto;
-		&:hover {
+		&:hover,
+		&:focus {
 			background: #c4c4c4;
 			color: #787878;
 			transition: all 0.5s;
