--- a/assets/scss/pages/_page.scss
+++ b/assets/scss/pages/_page.scss
@@ -66,13 +66,9 @@ body.single #site-content {
 		#page {
 			flex-direction: row;
 
-			#title {
-				height: calc(100vh - 160px);
-				width: 50%;
-			}
-
+			#title,
 			#content {
-				height: calc(100vh - 160px);
+				height: calc(100vh - 140px);
 				width: 50%;
 			}
 		}
