--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -14,6 +14,7 @@ License URI: http://www.gnu.org/licenses/gpl-2.0.html
 */
 
 @import "node_modules/normalize.css/normalize.css";
+@import "core/general";
 @import "core/variables";
 @import "core/colors";
 @import "core/typography";
