--- a/assets/scss/pages/_courses.scss
+++ b/assets/scss/pages/_courses.scss
@@ -41,11 +41,16 @@ body.courses #site-content {
 
 					h2 {
 						font-family: $font-sans-serif;
-						font-family: $font-sans-primary;
-						font-size: 1.2em;
-						font-weight: 600;
+						font-size: 1.5em;
+						font-weight: 400;
 						padding: 0 2em;
 						text-align: center;
+
+						a {
+							color: $color-white;
+							text-decoration: none;
+							border-bottom: none;
+						}
 					}
 
 					h3 {
@@ -71,14 +76,25 @@ body.courses #site-content {
 					}
 
 					.image {
+						position: relative;
 						border: none;
-						&.course-sold-out {
-							background-color: rgba(51, 51, 51, 0.5) !important;
-							background-blend-mode: darken;
-							background-position: center;
-							background-repeat: no-repeat;
-							background-size: cover;
-						}
+						background-color: rgba(51, 51, 51, 0.75) !important;
+						background-blend-mode: darken;
+						background-position: center;
+						background-repeat: no-repeat;
+						background-size: cover;
+					}
+
+					.title {
+						position: absolute;
+						top: 40%;
+						left: 50%;
+						width: 80%;
+						// border: 2px solid red;
+						transform: translate(-50%, -50%);
+						display: block;
+						color: $color-white;
+						z-index: 2;
 					}
 
 					.sold-out {
