Implement masonry gallery

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -13,7 +13,7 @@ License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
 */
 
-@import "node_modules/normalize.css/normalize.css";
+@import "vendors/normalize";
 @import "core/general";
 @import "core/variables";
 @import "core/colors";
