--- a/assets/scss/pages/_gallery.scss
+++ b/assets/scss/pages/_gallery.scss
@@ -2,26 +2,67 @@ body.gallery #site-content {
 	background-color: $color-white;
 
 	.grid {
-		display: grid;
-		grid-template-columns: repeat(auto-fill, minmax(140px, 1fr));
-		grid-gap: 10px;
-		align-items: stretch;
-		list-style: none;
-		margin: 0 0.5em 0.5em;
+	  column-count: 1;
+	  column-gap: 10px;
+	  padding: 10px;
+	  width: calc(100% - 20px);
 
-		.grid-item {
+	  @media (min-width: 200px) {
+		column-count: 1;
+	  }
+
+	  @media (min-width: 400px) {
+		column-count: 2;
+	  }
+
+	  @media (min-width: 600px) {
+		column-count: 3;
+	  }
+
+	  @media (min-width: 800px) {
+		column-count: 4;
+	  }
+
+	  @media (min-width: 1000px) {
+		column-count: 5;
+	  }
+
+	  @media (min-width: 1200px) {
+		column-count: 6;
+	  }
+
+	  @media (min-width: 1400px) {
+		column-count: 7;
+	  }
+
+	  @media (min-width: 1600px) {
+		column-count: 8;
+	  }
+
+	  @media (min-width: 1800px) {
+		column-count: 9;
+	  }
+
+	  @media (min-width: 2000px) {
+		column-count: 10;
+	  }
+
+	  .grid-item {
+		background: #fff;
+		display: inline-block;
+		width: 100%;
+		box-sizing: border-box;
+		break-inside: avoid;
+
+		a {
+		  border: none;
+
+		  img {
 			display: block;
-			max-width: 100%;
-
-			a {
-				border: none;
-
-				img {
-					display: block;
-					width: 100%;
-					height: auto;
-				}
-			}
+			width: 100%;
+			height: auto;
+		  }
 		}
+	  }
 	}
-}
+  }
