Various formattings and stylings

--- a/assets/scss/core/_colors.scss
+++ b/assets/scss/core/_colors.scss
@@ -6,6 +6,7 @@ $color-semi-light-grey: rgb(204, 204, 204);
 $color-light-grey: rgb(242, 242, 242);
 $color-white: rgb(255, 255, 255);
 $color-red: rgb(115, 13, 13);
+$color-blue: rgb(13, 70, 115);
 
 body {
 	background-color: $color-black;
