--- a/assets/scss/pages/_courses.scss
+++ b/assets/scss/pages/_courses.scss
@@ -74,7 +74,7 @@ body.courses #site-content {
 					}
 					&.course-available {
 						h3 {
-							background-color: $color-blue;
+							background-color: $color-green;
 						}
 					}
 
